Closed Bug 402535 Opened 18 years ago Closed 18 years ago

Cycle collection crashes with Leak Monitor extension installed

Categories

(Core :: XPConnect, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: peterv, Assigned: peterv)

References

Details

(Keywords: crash, regression)

Attachments

(2 files)

We're trying to trace a context without a global object. That context is created when the service something gets the service @dbaron.org/leak-monitor-service;1. The cycle collector should just deal. This should be blocking M9, we want people to use that extension to help us track down leaks.
Flags: blocking1.9?
Blocks: 401687
Status: NEW → ASSIGNED
Keywords: crash, regression
Priority: -- → P1
Attached patch v1Splinter Review
Attached patch v1 (diff -w)Splinter Review
This makes us not add contexts with null globalobjects to mClearedGlobalObjects so that when we look up global objects corresponding to contexts in TraceXPConnectRoots we only get a non-null globalobject if the context is in mClearedGlobalObjects.
Attachment #287400 - Flags: superreview?(jst)
Attachment #287400 - Flags: review?(jonas)
Anybody using cycle collector with trunk is overriding extension compatibility; it isn't even close to working for finding leaks anymore.
Er, anybody using *leak monitor* with trunk since cycle collector landed is ...
This might be triggered by more than just Leak Monitor though. Also, wouldn't it make it harder to fix Leak Monitor so it works with the beta?
It might. I'm just surprised people are using current leak monitor.
Attachment #287400 - Flags: superreview?(jst) → superreview+
Blocking, but agree with dbaron and don't think it should hold up beta unless there's a solid expectation that this indicates another potential crash in the cycle collector: peterv, is that what you're saying?
s/Blocking/I think this should block final,/ above
Yeah, discussed with peterv. Marking as blocking. Let's get this landed. Also, sounds like we need to get leak monitor working in general. Is there a bug for that?
Flags: blocking1.9? → blocking1.9+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
FWIW, I wasn't using Leak Monitor when I started experiencing this crash, but it was enabled, since I have compatibility checking turned off. There may be other folks in the same boat who aren't actually using the extension but still have it enabled.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: